--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -32,7 +32,7 @@
             <a class="reset" href="/web/signup" data-original-title="" title="">{{ 'SignUp' | translate }}</a>
           </div>
           <div>
-            <button type="submit" class=" btncolor" [disabled]="!userForm.valid" (click)="myFunction()">{{ 'SignIn' | translate }}</button>
+            <button type="submit" class=" btncolor" [disabled]="!userForm.valid" (click)="toastMessageDisplay()">{{ 'SignIn' | translate }}</button>
 
           </div>
         </div>
