--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="header1" style="margin-top: 0px">
     <div id="main">
         <!-- <a id="nav-toggle" class="hammenu active"   href="#">&#9776;</a> -->
-        <span style="font-size:30px;cursor:pointer" onclick="sidebar()">&#9776; NexTech HRMS
+        <span style="font-size:30px;cursor:pointer" > NexTech HRMS
         </span>
         <i id="nav-toggle" style="font-size: 20px;margin-left: 150px">&#x1F50D;</i>
         <input type="search" class="ZPselect" id="zpeople_search_box" placeholder="Search Employee" value="" name="Search">
@@ -9,7 +9,7 @@
         <button type="button"  class="btn btn-secondary logoutbtn " data-dismiss="modal" (click)="redirectToLoginPage()"><span style="color: white">LogOut</span></button>
     </div>
 </div>
-<div id="myDIV" class="sidenav " (click)=" toastMessageDisplay()">
+<div id="myDIV" class="sidenav " >
     <ul style="    margin-left: -40px;margin-top: -20px;">
         <div class="dropbtn " (click)="isActive = true" *ngFor="let n of menuList" (click)="select(n.name);" [ngClass]="{active: isSelect(n.name)}">
             <li style="padding: 10px 25px">{{n.name}}
@@ -23,6 +23,5 @@
         </div>
     </ul>
 </div>
-
-<div  id="toastbar"[innerHTML]="toast"></div>
+<div id="toastbar"[innerHTML]="toast"></div>
 <router-outlet></router-outlet>
