--- a/src/app/components/approvals/approvals.component.css
+++ b/src/app/components/approvals/approvals.component.css
@@ -14,3 +14,17 @@
     font-size: 15px;
     margin-top: 20px;
 }
+.selected {
+    color: OrangeRed;
+}
+
+.selectstatus{
+    width: 180px;
+    margin-left: 700px;
+    margin-top: 5px;
+}
+.check{
+    margin-top: 13px;
+    width: 30px;
+    height: 20px;
+}
