<update employee leave status>

--- a/src/app/components/attendance/attendance.component.html
+++ b/src/app/components/attendance/attendance.component.html
@@ -62,14 +62,15 @@
         </div>
         <div class="modal-body">
           <div class="row" style="margin-top: 30px">
-            <div class=" form-group col-lg-6" style="margin-left: 35px;">
+            <div class=" form-group col-lg-6" style="margin-left: 35px;" >
               <label class="label-name ">{{ 'EmployeeId' | translate }}</label>
-              <select class="loginUserid" formControlName="employee">
-                <option *ngFor=" let employee of allEmployee" [value]="employee.id">
+              <select class="loginUserid demo" formControlName="employee" >                 
+                <option *ngFor=" let employee of allEmployee" [value]="employee.id"  >
                   {{employee.userid}}
                 </option>
               </select>
             </div>
+           
 
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6">
