--- a/src/app/components/approvals/approvals.component.html
+++ b/src/app/components/approvals/approvals.component.html
@@ -7,38 +7,31 @@
       <div class="heading4">{{'Approvals'|translate}}</div>
     </header>
     <div class="row" style="border-bottom: 1px solid #e9e9e9">
-      <button class="btn btn-primary adduser myrequest" type="button" (click)="show=!show">{{'My Requests '|translate}}
+      <button class="btn btn-primary adduser myrequest" type="button" >{{'My Requests '|translate}}
       </button>
     </div>
-    <div style="margin-left: 700px;margin-top: -60px;">
-        <label   class="label-name "> {{ 'Select Status' | translate }}</label>
-      </div>
-      <select class="loginUserid selectstatus" (change)="onSelect($event.target.value)">
-        <option value="0">AllStatus</option>
-        <option *ngFor="let status of approvalStatus" [value]="status.id">{{status.name}}</option>
-      </select>
+   
 
 
-    
 
-    <div *ngIf="show">
-      <div id="snackbar"[innerHTML]="toastMessage"></div>
+    <div>
+      <div id="snackbar" [innerHTML]="toastMessage"></div>
       <table class="table  table-hover table-bordered ">
 
-        <tr *ngFor="let leave of allLeave ;let i = index" [class.selected]="checkbox1.checked" >
-          <td >{{leave.id}} </td>
-          <td >{{leave.employee.userid}}
-          </td>
-          <td>            
-          <input class="check"  #checkbox1 type="checkbox" value={{leave.id}} (change)="updateChecked(leave.id, $event)">   
-        </td>
-        </tr>    
+        <tr *ngFor="let leave of allLeave ;let i = index"  >
+          
+          <td>{{leave.employee.userid}} </td>
+          <td (click)="onSelect($event.target.value,leave.id );onSubmitApprovalStatus()">
+          <div >
+            <button type="button" class="btn btn-secondary" value="Approved"   >{{'Approved'|translate}}</button>
+            <button type="button" style="margin-left: 30px;" class="btn btn-secondary" value="Reject" >{{'Rejected'|translate}}</button>
+          </div>
+         </td>
+         
+        </tr>
       </table>
-   
-    <div class="savebtn">
-        <button type="submit" class="btn btn-secondary" style="width: 30%;" (click)="onSubmitApprovalStatus();"data-toggle="modal" data-target="#myModal" >{{'Save'|translate}}</button>
-       
-      </div>
+
+     
     </div>
   </div>
 </div>
@@ -48,15 +41,15 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h3 class="modal-title" >Employee Attendance</h3>
+        <h3 class="modal-title">Approvals</h3>
       </div>
-          <div class="modal-body">
-           <p id="response" style="font-size: 15px">Please Select Employee </p> 
-          </div>
+      <div class="modal-body">
+        <p id="response" style="font-size: 15px">Please Select Employee </p>
+      </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
-    
+
   </div>
-</div> 
+</div>
