--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -176,9 +176,9 @@
           <div class="row" style="    margin-top: 30px">
             <div class=" form-group col-lg-6" style="margin-left: 35px;">
               <label class="label-name ">{{ 'ReportTo' | translate }}</label>
-              <select class="loginUserid" formControlName="reportTo" >
-                <option *ngFor=" let employee of allEmployee" [value]="employee.id">
-                  {{employee.userid}}
+              <select class="loginUserid" formControlName="reportTo" (click)=reportTo() >
+                <option *ngFor=" let menu of selectMenu" [value]="menu.id">
+                  {{menu.userid}}
                 </option>
               </select>
 
