--- a/src/app/components/approvals/approvals.component.html
+++ b/src/app/components/approvals/approvals.component.html
@@ -45,7 +45,7 @@
         <h3 class="modal-title">Approvals</h3>
       </div>
       <div class="modal-body">
-        <p id="response" style="font-size: 15px">Please Select Employee </p>
+        <p id="response" style="font-size: 15px">Status Update Successfully </p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
