--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
             <div class=" form-group col-lg-6">
               <label class="loginlabel required "> {{ 'Userid' | translate }}</label>
               <br>
-              <input formControlName="userid" id="userid" class="loginUserid" >
+              <input  type = "text" formControlName="userid" id="userid" class="loginUserid" >
               <app-control-messages [control]="userForm.controls.userid"></app-control-messages>
             </div>
           </div>
@@ -32,7 +32,7 @@
             <a class="reset" href="/web/signup" data-original-title="" title="">{{ 'SignUp' | translate }}</a>
           </div>
           <div>
-            <button type="submit" class=" btncolor" [disabled]="!userForm.valid" (click)="toastMessageDisplay()">{{ 'SignIn' | translate }}</button>
+            <button type="submit" class=" btncolor"  [disabled]="!enabled" [disabled]="!userForm.valid" (click)="toastMessageDisplay()">{{ 'SignIn' | translate }}</button>
           </div>
         </div>
       </div>
