--- a/src/app/components/attendance/attendance.component.html
+++ b/src/app/components/attendance/attendance.component.html
@@ -1,13 +1,13 @@
-<app-home>
-</app-home>
-<div class=" main-class">
+<app-home></app-home>
+<ng4-loading-spinner> </ng4-loading-spinner>
+<div class=" main-class" >
   <div class="primary-container">
     <header class="header">
       <div class="heading4">{{'Employee Attendance' | translate}}</div>
     </header>
 
     <div class="addbtn">
-      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal">{{'Add Employee Attendance'| translate}}
+      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal" >{{'Add Employee Attendance'| translate}}
       </button>
       <div class="input-group input-group-lg searchButton">
         <input type="date" class="form-control" style="height: 40px" placeholder="Search By Name" [(ngModel)]="date">
@@ -18,7 +18,7 @@
         </div>
       </div>
     </div>
-    <div layout="row" class="userlist ">{{'Attendance List' | translate}}</div>
+    <div layout="row" class="userlist " (load)="startLoadingSpinner()">{{'Attendance List' | translate}}</div>
     <table class="table table-striped table-hover table-fixed settable">
       <thead>
         <tr>
@@ -71,13 +71,13 @@
                 </option>
                 
               </select>
-            
+              <div class="error" *ngIf="!attendanceForm.controls['employee'].valid && attendanceForm.controls['employee'].touched">{{'Please  Select EmployeeId' | translate}}.</div>
             </div>
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6">
                 <label class="label-name "> {{ 'Intime' | translate }}</label>
                 <input type="time" step="0" id="intime" formControlName="intime" class="loginUserid">
-                <app-control-messages [control]="attendanceForm.controls.intime"></app-control-messages>
+                <div class="error" *ngIf="!attendanceForm.controls['intime'].valid && attendanceForm.controls['intime'].touched">{{'Please Enter Intime' | translate}}.</div>
                 <div id="intime_validation" class="passvalidation"></div>
               </div>
             </div>
@@ -87,19 +87,20 @@
               <label class="label-name ">{{ 'OutTime' | translate }}</label>
               <br>
               <input type="time" step="0" formControlName="outtime" class="loginUserid" (blur)="timeValidation();" (change)="timeValidation();">
-              <app-control-messages [control]="attendanceForm.controls.outtime"></app-control-messages>
+              <div class="error" *ngIf="!attendanceForm.controls['outtime'].valid &&  attendanceForm.controls['outtime'].touched">{{'Please Enter Outtime' | translate}}</div>
               <div id="outtime_validation" class="error"></div>
             </div>
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6">
                 <label class="label-name "> {{ 'Date' | translate }}</label>
                 <input type="date" formControlName="date" class="loginUserid">
-                <app-control-messages [control]="attendanceForm.controls.date"></app-control-messages>
+                <div class="error" *ngIf="!attendanceForm.controls['date'].valid &&  attendanceForm.controls['date'].touched">{{'Please Enter Date' | translate}}</div>
+              <div class="error" *ngIf="!attendanceForm.controls['date'].valid && attendanceForm.controls['date'].touched">{{'please Enter Date | translate'}}</div>
               </div>
             </div>
           </div>
           <div class="savebtn">
-            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!attendanceForm.valid" (click)="toastMessageDisplay()">{{'Save'|translate}}</button>
+            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!attendanceForm.valid" (click)="loadingSpinner();toastMessageDisplay()">{{'Save'|translate}}</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
       margin-left: 20px;">Close</button>
           </div>
