--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,4 @@
+<ng4-loading-spinner> </ng4-loading-spinner>
 <form [formGroup]="userForm" (submit)="onLoginFormSubmit()">
   <div class="container" style="margin-top: 100px ">
     <p id="data"></p>
@@ -12,10 +13,12 @@
           <br>
           <div class="form-group ">
             <div class=" form-group col-lg-6">
+                <div id="snackbar"[innerHTML]="toastMessage"></div>
               <label class="loginlabel required "> {{ 'Userid' | translate }}</label>
               <br>
-              <input  type = "text" formControlName="userid" id="userid" class="loginUserid" >
-              <app-control-messages [control]="userForm.controls.userid"></app-control-messages>
+              <input  type = "text" formControlName="userid" id="userid"  class="loginUserid"  >
+              <div class="error" *ngIf="!userForm.controls['userid'].valid && userForm.controls['userid'].touched">{{'Please Enter UserId' | translate}}.</div>
+             
             </div>
           </div>
 
@@ -23,20 +26,20 @@
             <div class=" form-group col-lg-6 " style="margin-right: 30px">
               <label class=" required loginlabel"> {{ 'Password' | translate }} </label>
               <br>
-              <input  type = "password" formControlName="password" id="password" class="loginUserid">
-              <app-control-messages [control]="userForm.controls.password"></app-control-messages>
+              <input  type = "password" formControlName="password" id="password" minlength="4" class="loginUserid">
+              <div class="error" *ngIf="!userForm.controls['password'].valid && userForm.controls['password'].touched">{{'Please Enter Password' | translate}}.</div>
             </div>
           </div>
           <div>
-            <a class="reset" href="ResetPassword.html">{{ 'ResetPassword' | translate }}</a>
+            <a class="reset" routerLink="/resetpassword">{{ 'ResetPassword' | translate }}</a>
             <a class="reset" href="/web/signup" data-original-title="" title="">{{ 'SignUp' | translate }}</a>
           </div>
           <div>
-            <button type="submit" class=" btncolor"  [disabled]="!enabled" [disabled]="!userForm.valid" (click)="toastMessageDisplay()">{{ 'SignIn' | translate }}</button>
+            <button type="submit" class=" btncolor"   (click)="validate();">{{ 'SignIn' | translate }}</button>
           </div>
         </div>
       </div>
     </div>
   </div>
 </form>
-<div style="margin-right: -50px" id="snackbar"[innerHTML]="toastMessage"></div>
+ 
