--- a/src/styles.css
+++ b/src/styles.css
@@ -89,7 +89,7 @@
    background-color: #fff;
    background-image: none;
    border: 1px solid #ccc;
-   border-radius: 1px;
+   border-radius: 4px;
   
 }
 .label-name {
@@ -157,4 +157,7 @@
   }
 .tableft{
     margin-left: 3%
+}
+.ng-touched.ng-invalid {
+    border-color:red; 
 }
