--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,11 +1,12 @@
 <ng4-loading-spinner> </ng4-loading-spinner>
+<div id="snackbar"[innerHTML]="toastMessage"></div>
 <form [formGroup]="userForm" (submit)="onLoginFormSubmit()">
   <div class="container" style="margin-top: 100px ">
     <p id="data"></p>
 
     <div class="col-lg-12">
       <div class=" form-group col-lg-7">
-        <div class=" form-control  loginForm">
+        <div class=" form-control  loginForm" >
           <h1 align="center">{{ 'HRMS' | translate }}</h1>
           <div class="logininside">
             <p>Access and manage your instances from this HRMS account.</p>
@@ -13,12 +14,12 @@
           <br>
           <div class="form-group ">
             <div class=" form-group col-lg-6">
-                <div id="snackbar"[innerHTML]="toastMessage"></div>
+                
               <label class="loginlabel required "> {{ 'Userid' | translate }}</label>
               <br>
-              <input  type = "text" formControlName="userid" id="userid"  class="loginUserid"  >
+              <input  type = "text" formControlName="userid" id="userid"  class="loginUserid" (keyup)="validation();" >
               <div class="error" *ngIf="!userForm.controls['userid'].valid && userForm.controls['userid'].touched">{{'Please Enter UserId' | translate}}.</div>
-             
+             <div class ="valid"  id="userid_validation"></div>
             </div>
           </div>
 
@@ -26,13 +27,14 @@
             <div class=" form-group col-lg-6 " style="margin-right: 30px">
               <label class=" required loginlabel"> {{ 'Password' | translate }} </label>
               <br>
-              <input  type = "password" formControlName="password" id="password" minlength="4" class="loginUserid">
+              <input  type = "password" formControlName="password" id="password"  class="loginUserid" (keyup)="validation();">
               <div class="error" *ngIf="!userForm.controls['password'].valid && userForm.controls['password'].touched">{{'Please Enter Password' | translate}}.</div>
+           <div class ="valid" id="password_validation"></div>
             </div>
           </div>
           <div>
             <a class="reset" routerLink="/resetpassword">{{ 'ResetPassword' | translate }}</a>
-            <a class="reset" href="/web/signup" data-original-title="" title="">{{ 'SignUp' | translate }}</a>
+            
           </div>
           <div>
             <button type="submit" class=" btncolor"   (click)="validate();">{{ 'SignIn' | translate }}</button>
@@ -43,3 +45,13 @@
   </div>
 </form>
  
+<footer id="footer" style="    margin-top: 250px;">
+  <div class="container">
+      <div class="row">
+          <div class="col-sm-6">
+              Designed by <a target="_blank" href="http://nextechservices.in/" title="Web applications development angularjs websites">Nextech Services Pvt Ltd. </a>
+          </div>
+          
+      </div>
+  </div>
+</footer>
