--- a/src/app/components/resetpassword/resetpassword.component.css
+++ b/src/app/components/resetpassword/resetpassword.component.css
@@ -48,8 +48,8 @@ display: inline-block;
          border-radius: 4px;
          margin-left: 15px;
          color: #fff;
-         border-color: #21b799;
-         background-color: #21b799;
+         border-color: #45aed6;;
+         background-color: #45aed6;;
      }
      .error{
         color: red;
@@ -68,7 +68,7 @@ display: inline-block;
         padding: 16px;
         position: fixed;
         z-index: 1;
-        top: 50px;
+        top: 70px;
         left: 60%;
         font-size: 17px;
     }
