--- a/src/app/components/resetpassword/resetpassword.component.html
+++ b/src/app/components/resetpassword/resetpassword.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="userForm" (submit)="onResetPasswordFormSubmit()">
   <div class="container" style="margin-top: 100px ">
     <div class=" form-control " style="margin-left: 400px;width: 300px;height: 400px ;border: 1px solid transparent;">
-      <h2 align="center" style="color:#21b799;">Reset Password</h2>
+      <h2 align="center" style="color:#45aed6;;">Reset Password</h2>
       <br>
       <div class=" form-group col-lg-6">
         <div id="snackbar" [innerHTML]="toastMessage"></div>
